# unnamed-sdvx-clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.linux  mac-cmake.sh  vcpkg.json
.github/workflows/: build.yml
Audio/: CMakeLists.txt
Audio/src/: AudioStreamBase.cpp  DSP.cpp
Beatmap/: CMakeLists.txt  stdafx.h
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapFromKSON.cpp  BeatmapObjects.cpp  BeatmapPlayback.cpp  ChallengeIndex.cpp  EffectTimeline.cpp  LineGraph.cpp  MapDatabase.cpp
Graphics/: CMakeLists.txt
Graphics/src/: Font.cpp  Gamepad_Impl.cpp  Gamepad_Impl.hpp  Material.cpp  OpenGL.cpp  ParticleSystem.cpp  RenderQueue.cpp  Shader.cpp  Window.cpp
Main/: CMakeLists.txt  Game.cpp  GameConfig.cpp  GameConfig.hpp  ScoreScreen.cpp  SettingsScreen.cpp  SongSelect.cpp  stdafx.h
Main/LightPlugin/: LightPlugin.h
Main/include/: Application.hpp  ApplicationTickable.hpp  BaseGameSettingsDialog.hpp  BasicDefinitions.hpp  CalibrationScreen.hpp  CollectionDialog.hpp  DownloadScreen.hpp  Game.hpp  GameConfig.hpp  GameFailCondition.hpp  GameplaySettingsDialog.hpp  GuiUtils.hpp  HitStat.hpp  IR.hpp  Input.hpp  ItemSelectionWheel.hpp  LaserTrackBuilder.hpp  LuaRequests.hpp  MultiplayerScreen.hpp  Replay.hpp  ScoreScreen.hpp  Scoring.hpp  Search.hpp  SettingsPage.hpp  ShadedMesh.hpp  (+2 more)
Shared/: CMakeLists.txt  stdafx.h
Tests.Shared/: CMakeLists.txt
Tests.Shared/src/: TestFilesystem.cpp
cmake/: Macros.cmake
updater/: CMakeLists.txt
updater/src/: Downloader.cpp  Downloader.hpp  Extractor.cpp  Extractor.hpp  updater.cpp
(+82 files in other folders)
